fix work experience

--- a/index.html
+++ b/index.html
@@ -590,11 +590,11 @@
 
             <h2>Independent Projects : </h2>
 
-              <h3>Rapid Roll(Android)</h3>
+              <h3>Rapid Roll(Android Application)</h3>
 
               <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
 
-              <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme for
+              <p>User can play this game using android device accelerometer, see leaderboards and change theme for
                 game screen. The speed of the game increases as time passes by. Game will be over if a user dies three times and user can restart the game again.
               </p>
 
@@ -610,7 +610,8 @@
 
               <h4>Tools : iGraphics, C</h4>
 
-              <p>This is a rapid roll game using iGraphics for desktop. User can play game and see leaderboard.</p>
+              <p>User can play this game in desktop, see leaderboards. The speed of the game increases
+                as time passes by. Game will be over if a user dies three times.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Code</a></h4>
 
@@ -620,17 +621,17 @@
 
               <h4>Tools : Unity 3D, C#</h4>
 
-              <p>This is a small car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
+              <p>Users can play and see leaderboard from android, iOS and desktop.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Code</a></h4>
 
               <br>
 
-              <h3>Notebook</h3>
+              <h3>Notebook(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java</h4>
+              <h4>Tools : Android Studio, Java, File System</h4>
 
-              <p>This is an android notebook application. User can save, edit, delete one's writings in the notebook.</p>
+              <p>User can save, edit and delete one's writings in the notebook.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Code</a></h4>
 
@@ -639,11 +640,11 @@
 
               <br>
 
-              <h3>Speedometer and Location</h3>
+              <h3>Speedometer and Location(Android Application)</h3>
 
               <h4>Tools : Android Studio, Java, Google Map Api</h4>
 
-              <p>This is an android application from which user can see one's current velocity, current location in map and location details.</p>
+              <p>Users can see one's current velocity, current location in map and location details.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Code</a></h4>
 
@@ -653,12 +654,11 @@
               <br>
 
 
-              <h3>Mental Age Simulator</h3>
+              <h3>Mental Age Simulator(Android Application)</h3>
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android application on which there are some questions. A user needs to answer these questions and
-                based on his answers, his mental age will be simulated.</p>
+              <p>A user needs to answer some questions and based on his answers, his mental age will be generated.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Code</a></h4>
 
@@ -667,11 +667,11 @@
 
               <br>
 
-              <h3>Flashlight</h3>
+              <h3>Flashlight(Android Application)</h3>
 
               <h4>Tools : Android Studio, Java</h4>
 
-              <p>This is an android flashlight application. Users can use this as a torch light from android device.</p>
+              <p>Users can use this as a torch light from android device.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Code</a></h4>
 
@@ -679,13 +679,6 @@
 <!--            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Flashlight</a> on Amazon App Store</h4>-->
 
               <br>
-
-              <h3>Calculator</h3>
-
-              <h4>Tools : Android Studio, Java</h4>
-
-              <p>It is a simple android calculator application than can perform basic mathematical operations.</p>
-
 
             <br>
           </div>
