--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
           <li>Computer Vision</li>
 
-          <li>Machine Learning</li>
+<!--          <li>Machine Learning</li>-->
 
           <li>Natural Language Processing</li>
 
