change ridmik+ name

--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
 
             <p>Projects on which I have worked in Ridmik Labs : </p>
 
-            <h4>Ridmik+</h4>
+            <h4>RidmikChat</h4>
 
-            <p>Ridmik+ is an XMPP(Extensible Messaging and Presence Protocol) based secured
+            <p>RidmikChat is an XMPP(Extensible Messaging and Presence Protocol) based secured
                   messaging and social platform application for android</p>
 
             <ul>
@@ -367,7 +367,7 @@
             <strong>Tools & Languages I have used : </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption and decryption, Android Studio, Java,
             Kotlin, SQL
 
-            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik+</a> on Google Play</h4>
+            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">RidmikChat</a> on Google Play</h4>
 
             <br>
             <h4>Bangla Article Summarizer(Research Project)</h4>
