--- a/index.html
+++ b/index.html
@@ -243,13 +243,11 @@
       <div class="col-md-5">
         <h3>Research Interests</h3>
         <ul class="ul-interests">
-          <li>Software Engineering</li>
-
-          <li>Computer Vision</li>
-
-<!--          <li>Machine Learning</li>-->
+          <li>Software Engineering and Security</li>
 
           <li>Natural Language Processing</li>
+
+          <li>Computer Vision</li>
 
         </ul>
       </div>
