--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc. in Computer Science and Engineering
-      from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">Bangladesh University of Engineering and Technology(BUET)</a>. My goal is to
-      provide automated tools or techniques that can assist software developers to increase their productivity
-      and make bug-free, secured, reliable, and high-quality software. My interest also lies in machine learning with its application in software engineering,
-      computer vision, and natural language processing.
+      from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">Bangladesh University of Engineering and Technology(BUET)</a>.My vision
+      is to improve the quality, efficiency, security and
+      reliability of software and, at the same time, make software development easier through providing automated tools or techniques.
+      My interest also lies in machine learning with its application in software engineering, computer vision, and natural language processing.
     </p>
 
 
