--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 
       <div class="portrait-title">
         <h2>Md. Aminul Islam</h2>
-        <h3>Software Engineer</h3>
+        <h3>PhD Student in Computer Science</h3>
 
 
         <h3>
 
-          <span>Ridmik Labs, Dhaka, Bangladesh</span>
+          <span>University of Illinois Chicago</span>
 
         </h3>
 
@@ -243,11 +243,11 @@
       <div class="col-md-5">
         <h3>Research Interests</h3>
         <ul class="ul-interests">
+          <li>Data Science</li>
+
+          <li>Machine Learning</li>
+
           <li>Software Engineering and Security</li>
-
-          <li>Natural Language Processing</li>
-
-          <li>Computer Vision</li>
 
         </ul>
       </div>
@@ -257,6 +257,14 @@
       <div class="col-md-7">
         <h3>Education</h3>
         <ul class="ul-edu fa-ul">
+
+          <li>
+            <i class="fa-li fas fa-graduation-cap"></i>
+            <div class="description">
+              <p class="course">PhD Student in Computer Science(First year)</p>
+              <p class="institution">University of Illinois Chicago</p>
+            </div>
+          </li>
 
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
