--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
   <div class="col-12 col-lg-4">
     <div id="profile">
 
-      <img class="avatar avatar-circle" src="/author/aminul-islam/sojol_image.jpg" alt="Md. Aminul Islam">
+      <img class="avatar avatar-circle" src="/author/aminul-islam/visa_image.jpg" alt="Md Aminul Islam">
 
       <div class="portrait-title">
-        <h2>Md. Aminul Islam</h2>
+        <h2>Md Aminul Islam</h2>
         <h3>PhD Student in Computer Science</h3>
 
 
@@ -209,7 +209,7 @@
         </li>
 
         <li>
-          <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">
+          <a href="https://www.linkedin.com/in/md-aminul-islam-sojol-13117b266" target="_blank" rel="noopener">
             <i class="fab fa-linkedin big-icon"></i>
           </a>
         </li>
@@ -784,7 +784,7 @@
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
         <span id="person-email">
-        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506 AT gmail DOT com</a></span>
+        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >mislam34 AT uic DOT edu</a></span>
       </li>
 
       <li>
@@ -795,7 +795,7 @@
 
       <li>
         <i class="fa-li fab fa-linkedin fa-2x" aria-hidden="true"></i>
-        <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">Message Me</a>
+        <a href="https://www.linkedin.com/in/md-aminul-islam-sojol-13117b266" target="_blank" rel="noopener">Message Me</a>
       </li>
 
 
@@ -805,12 +805,12 @@
 <!--      </li>-->
 
 
-        <li>
-          <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-          <span id="person-address">
-          <a href="https://www.google.com/maps/place/Gulshan+1,+Dhaka+1212/@23.7806613,90.407685,15z/data=!3m1!4b1!4m5!3m4!1s0x3755c79ebfc24eab:0xea7dab563f12457a!8m2!3d23.7820624!4d90.4160527"
-             target="_blank" rel="noopener">Gulshan-1, Dhaka-1212, Bangladesh</a></span>
-        </li>
+<!--        <li>-->
+<!--          <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>-->
+<!--          <span id="person-address">-->
+<!--          <a href="https://www.google.com/maps/place/Gulshan+1,+Dhaka+1212/@23.7806613,90.407685,15z/data=!3m1!4b1!4m5!3m4!1s0x3755c79ebfc24eab:0xea7dab563f12457a!8m2!3d23.7820624!4d90.4160527"-->
+<!--             target="_blank" rel="noopener">Gulshan-1, Dhaka-1212, Bangladesh</a></span>-->
+<!--        </li>-->
 
 
     </ul>
