--- a/index.html
+++ b/index.html
@@ -229,11 +229,21 @@
 
     <h1>Biography</h1>
 
-    <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc. in Computer Science and Engineering
-      from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">Bangladesh University of Engineering and Technology(BUET)</a>. My vision
-      is to improve the quality, efficiency, security and
-      reliability of software and, at the same time, make software development easier through providing automated tools or techniques.
-      My interest also lies in machine learning with its application in software engineering, computer vision, and natural language processing.
+    <p>
+      I am a first-year PhD student in Computer Science at <a href="https://cs.uic.edu" target="_blank" rel="noopener">
+      University of Illinois Chicago</a>. Currently, I am also working as a Teaching Assistant in Computer Science Department
+      at the University of Illinois Chicago. Previously, I have completed my B.Sc. in Computer Science and Engineering from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">
+      Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>
+
+      My research interests lie in the intersection of data science, machine learning, and data privacy. In particular, I am
+      interested in reasoning with data that can solve problems in different domains. I am fascinated in
+      building interactive machine-learning methods with data that can reason the past, and also provide insights
+      for the future. I am also interested in protecting user data privacy in software applications. <br><br>
+
+      Previously, I worked as a Software Engineer at Ridmik Labs. Here, I attain experience working with some
+      large-scale native Android and iOS app development which have many millions of users. I also worked on protecting
+      user data privacy in these software applications. I have also experience building automated Bangla article summaries
+      from Bangla news articles using NLP and ML techniques.
     </p>
 
 
@@ -247,7 +257,7 @@
 
           <li>Machine Learning</li>
 
-          <li>Software Engineering and Security</li>
+          <li>Software/User Security</li>
 
         </ul>
       </div>
