--- a/index.html
+++ b/index.html
@@ -238,12 +238,7 @@
       My research interests lie in the intersection of data science, machine learning, and data privacy. In particular, I am
       interested in reasoning with data that can solve problems in different domains. I am fascinated in
       building interactive machine-learning methods with data that can reason the past, and also provide insights
-      for the future. I am also interested in protecting user data privacy in software applications. <br><br>
-
-      Previously, I worked as a Software Engineer at Ridmik Labs. Here, I attain experience working with some
-      large-scale native Android and iOS app development which have many millions of users. I also worked on protecting
-      user data privacy in these software applications. I have also experience building automated Bangla article summaries
-      from Bangla news articles using NLP and ML techniques.
+      for the future. I am also interested in protecting user data privacy in software applications.
     </p>
 
 
