--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <p>
       I am a first-year PhD student in Computer Science at <a href="https://cs.uic.edu" target="_blank" rel="noopener">
       University of Illinois Chicago</a>. Currently, I am also working as a Teaching Assistant in Computer Science Department
-      at the University of Illinois Chicago. Previously, I have completed my B.Sc. in Computer Science and Engineering from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">
+      at the University of Illinois Chicago. I have completed my B.Sc. in Computer Science and Engineering from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">
       Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>
 
       My research interests lie in the intersection of data science, machine learning, and data privacy. In particular, I am
@@ -358,104 +358,104 @@
 
           <div class="col-12">
             <h3>Software Engineer</h3>
-            <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
+            <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - December 2022</h4>
 
             <br>
 
             <p>Projects on which I have worked in Ridmik Labs : </p>
 
-            <h4>RidmikChat</h4>
-
-            <p>RidmikChat is an XMPP(Extensible Messaging and Presence Protocol) based secured
-                  messaging and social platform application for android</p>
-
-            <ul>
-              <li>developed XMPP based one to one and group messaging, end-to-end encrypted
-                  messaging in client side and different security issues to protect user app data in android device</li>
-              <li>working in the continuous development of the app specially in the messaging part</li>
-            </ul>
-
-            <strong>Tools & Languages I have used : </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption and decryption, Android Studio, Java,
-            Kotlin, SQL
-
-            <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">RidmikChat</a> on Google Play</h4>
-
-            <br>
             <h4>Bangla Article Summarizer(Research Project)</h4>
 
-            <p>Bangla article summarizer outputs an extractive Bangla summary of a given Bangla news article.</p>
+            <p>Bangla article summarizer outputs an extractive Bangla summary of a given Bangla news article which is currently being used
+              to generate automated Bangla summary of news articles for
+              <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik News</a> app</p>
 
             <ul>
-              <li>contributed for finding methodologies to construct an extractive Bangla article summarizer and developed Bangla article summarizer using two methods(TF, TF-IDF)
-          and mentioned tools and also evaluated performance on different news articles for each method</li>
+              <li>contributed for finding and implementing methodology for this Bangla article summarizer through sentence scoring
+                using the TF-IDF and mentioned tools, and also evaluated performance on different news articles with varying numbers of clusters</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, K-means Clustering Algorithm, our prepared Bangla Words Dataset,
-              TF(Term Frequency), TF-IDF(Term Frequency and Inverse Document Frequency), Sentence Ranking, Bangla Stemmer, Bangla Punctuation and Stop Words
-
-            <br><br>
+            <strong>Tools: </strong>Python, NLTK, Beautiful Soup, k-means Clustering, our prepared Bangla Words
+            Dataset with POS Tag, our prepared Bangla Stemmer rules, Bangla Punctuation and Stop Words, TF-IDF, and Sentence Ranking
+            <br>
 
             <h4>Boitoi(Android)</h4>
 
-            <p> Boitoi(Android) is a secured android eBook reader and short story reader and editor
-              with in-App book store. It is currently the most popular eBook reader in Bangladesh which has around 500k users.</p>
+            <p> Boitoi is a JavaScript based secured Android e-book and short story
+              reader with digital in-App book store. It is currently the most popular eBook reader in Bangladesh which has around 1M+ users.</p>
 
             <ul>
-              <li>developed secured eBook reader with in-App book store, short story reader and editor, many more functionalities
-                and working as one of a programming advisors for the continuous development</li>
-              <li>contributed to research on how books will be encrypted in server and decrypted in a specific user’s android
-                device using user device unique info</li>
+              <li>developed the secured e-book reader with the book store, short story reader and
+              editor, authentication, book payment, book streaming and many other features</li>
+              <li>contributed to finding books encryption and decryption policy based on Android
+              versions, and implemented some portions of decryption policy using C and JNI</li>
+              <li>developed books content privacy protection for writers in Android devices</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML,
-            AES decryption, ReadiumSDK
+            <strong>Tools: </strong>Android Studio, Java, Kotlin, C, AES/CBC decryption, C Java Native Inter-
+            face(JNI), SQL, JavaScript, HTML, CSS, XML, ReadiumSDK
 
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Boitoi</a> on Google Play</h4>
-
             <br>
 
             <h4>Boitoi(iOS)</h4>
 
-            <p>Boitoi(iOS) is a secured iOS eBook reader with in-App book store.</p>
+            <p>Boitoi is a JavaScript based secured e-book reader for iOS with book store</p>
 
             <ul>
-              <li>worked for the whole development of secured eBook reader with in-app book store</li>
-              <li>contributed to research on how books will be encrypted in server and decrypted in a specific user’s iOS device using iOS keychain</li>
+              <li>worked for the whole development of secured e-book reader with in-app book store
+                and all other features</li>
+              <li>contributed to finding books encryption and decryption policy using iOS keychain,
+              and implemented the whole decryption policy using C++ and CommonCrypto API</li>
+              <li>developed system using iOS keychain to prevent making a pirated copy of the books</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB,
-            StoryBoard, AES decryption, ReadiumSDK
+            <strong>Tools: </strong>Xcode, Swift, Objective-C, C++, JavaScript, AES/ECB, iOS keychain, HTML,
+            CSS, GRDB, StoryBoard, ReadiumSDK
 
             <h4><a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">
               Boitoi</a> on App Store</h4>
-
             <br>
 
             <h4>Ridmik Keyboard</h4>
 
-            <p> Ridmik Keyboard is a popular android keyboard in Bangladesh with Bangla phonetic keyboard, English and Arabic layout
-              which has around 50 million users.</p>
+            <p>Ridmik Keyboard is a Android keyboard in Bangladesh with Bangla
+              phonetic keyboard, English, and Arabic layout which has 50M+ users</p>
 
             <ul>
-              <li>fixed some bugs, worked on design changes, and implemented some new features</li>
+              <li>contributed to voice typing, changed some keyboard layouts, emojis, and themes,
+                added new theme customization, stickers, GIF, store, subscription, and payments</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C, Java Native Interface
+            <strong>Tools: </strong>Android Studio, Java, Kotlin, C, Speech Recognizer, Java Native Interface(JNI)
 
             <h4><a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Ridmik Keyboard</a>
               on Google Play</h4>
-
             <br>
 
-            <h4>Ridmik Account Kit</h4>
+            <h4>RidmikChat</h4>
 
-            <p>User can login to any Ridmik app in andorid or iOS devices using a single Ridmik account through this library.</p>
+            <p>RidmikChat is an XMPP based secured messaging and social platform application for Android</p>
 
             <ul>
-              <li>developed inter-app authentication and login screens for both android and iOS</li>
+              <li>developed XMPP based one-to-one and group messaging, end-to-end encrypted
+              messaging in client side using Signal protocol, different security issues to protect
+              sensitive user app data in android device, and also some other features in user’s feed</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, XML, Xcode, Swift, StoryBoard, iOS Keychain
+            <strong>Tools: </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption and decryption, Android Studio, Java,
+            Kotlin, SQL
+            <br>
+
+            <h4>Ridmik Account Kit Library</h4>
+
+            <p>User can login to any Ridmik app in andorid or iOS devices using a single Ridmik account through this library</p>
+
+            <ul>
+              <li>developed login and secure inter-app authentication maintaining user’s data privacy</li>
+            </ul>
+
+            <strong>Tools: </strong>Android Studio, Java, Xcode, Swift, Android Content Provider, iOS Keychain
 
             <br><br><br>
             <h3>Programmer</h3>
@@ -463,20 +463,20 @@
 
             <h4>AIST Project</h4>
 
-            <p>AIST project is a web based application for demonstrating real life application of
-              <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
-              (An Interpretable Attention-based Deep Learning Model for Crime Prediction) paper(preprint). The website shows predicted crimes info and some
-              indexes of crime dynamics predicted by AIST model in a given location. Besides, predicted and actual crime data analysis is shown based on different
-              criteria.
+            <p>AIST Project is a web application for users to visualize the predictions
+              of <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
+              (An Interpretable Attention-based Deep Learning Model for Crime Prediction)
+              model and analyze the predicted and actual crime data in different locations.
             </p>
 
             <ul>
-              <li>developed backend, REST API, frontend and an admin panel for uploading crime data in server predicted by AIST model</li>
+              <li>designed database, developed backend, REST API, full website, data visualization,
+                and an admin panel for uploading crime data in server predicted by AIST model</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong> Django, Python, SQLite, HTML, CSS, Javascript, jQuery, REST API, tkinter
+            <strong>Tools: </strong> Django, Python, REST API, SQLite, Javascript, jQuery, HTML, CSS, tkinter
 
-            <h4><a href = "https://aist.pythonanywhere.com/" target="_blank" rel="noopener">AIST Website</a></h4>
+            <h4><a href = "https://aist.pythonanywhere.com" target="_blank" rel="noopener">AIST Website</a></h4>
 
           </div>
 
