--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
           <li>Machine Learning</li>
 
-          <li>Software/User Security</li>
+          <li>Software/User Data Security</li>
 
         </ul>
       </div>
@@ -445,7 +445,7 @@
 
             <strong>Tools: </strong>XMPP, Signal Protocol, ejabberd(XMPP server), AES encryption and decryption, Android Studio, Java,
             Kotlin, SQL
-            <br>
+            <br><br>
 
             <h4>Ridmik Account Kit Library</h4>
 
@@ -464,7 +464,7 @@
             <h4>AIST Project</h4>
 
             <p>AIST Project is a web application for users to visualize the predictions
-              of <a href = "https://arxiv.org/abs/2012.08713" target="_blank" rel="noopener">AIST</a>
+              of <a href = "https://dl.acm.org/doi/10.1145/3582274" target="_blank" rel="noopener">AIST</a>
               (An Interpretable Attention-based Deep Learning Model for Crime Prediction)
               model and analyze the predicted and actual crime data in different locations.
             </p>
@@ -722,13 +722,13 @@
 
           <div class="col-12">
             <p>
-              <strong> Programming Languages : </strong>Java, Python, Swift, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
-              <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts <br/>
-              <strong> Mobile Application Development : </strong>Android, iOS <br/>
-              <strong> FrameWork : </strong> Django <br>
-              <strong> Database : </strong>Oracle, SQL <br/>
-              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API,
-                Firebase, JNI(Java Native Interface), JavaFX, LaTeX, tkinter <br/>
+              <strong> Programming Languages: </strong>Java, Python, Kotlin, Swift, C, C++, Assembly(80X86)<br/>
+              <strong> Scripting Languages: </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts<br/>
+              <strong> Mobile Application Development & Frameworks: </strong> Android, iOS, Django<br/>
+              <strong> Database: </strong> Oracle, SQL<br/>
+              <strong> Security: </strong> AES(CBC & ECB), CommpnCrypto API, iOS Keychain<br>
+              <strong> Tools & Others : </strong> Pandas, NLTK, REST API, Beautiful Soup, Seaborn, Google ML Kit &
+                Vision API, Tensorflow, Google Map API, Firebase, JNI, JavaFX, LATEX, tkinter<br/>
             </p>
           </div>
 
