--- a/index.html
+++ b/index.html
@@ -502,15 +502,15 @@
 
           <div class="col-12">
 
-            <h2>Academic Projects : </h2>
+            <h2>Academic Projects: </h2>
 
               <h3>Stay Safe(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQLite, Push Notification</h4>
+              <h4>Tools: Android Studio, Java, Firebase Database, Google Map API, SQLite, Push Notification</h4>
 
-              <p>Users can report for crimes in police station, connect with nearby police station or friends in emergency,
-                get notification alert, see verified crimes in an area and police can see reported crimes, connect with victims and
-                verify crimes, make an area as danger prone.
+              <p>Users can report for crimes in police station, connect with nearby police station or friends in
+                emergency, get notification alert, see verified crimes in an area and police can see reported
+                crimes, connect with victims and verify crimes, make an area as danger prone.
 
               <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Code</a></h4>
 
@@ -518,9 +518,10 @@
 
               <h3>Multivariate Stock Price Prediction</h3>
 
-              <h4>Tools : Python, Keras, Tensorflow, LSTM(Long Short Term Memory), one year share market data for training</h4>
+              <h4>Tools: Python, Keras, Tensorflow, LSTM(Long Short Term Memory), one year share market data for training</h4>
 
-              <p>A model is trained using LSTM on multiple attributes of share market data which can predict the starting price for next day share market.</p>
+              <p>A model is trained using LSTM on multiple attributes of share market data which can predict the starting price for
+                next day share market.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Code</a></h4>
 
@@ -528,11 +529,11 @@
 
               <h3>Online Examination(Web)</h3>
 
-              <h4>Tools : Java, JSP Servlet, Oracle, HTML, CSS</h4>
+              <h4>Tools: Java, JSP Servlet, Oracle, HTML, CSS</h4>
 
               <p>
-                Students can give exams and see marks on both MCQ and descriptive questions, teachers can upload questions from
-                admin panel and can check descriptive answers.</p>
+                Students can give exams and see marks on both MCQ and descriptive questions. Teachers can upload questions from
+                admin panel, and also can check descriptive answers.</p>
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Code</a></h4>
 
@@ -541,10 +542,10 @@
 
               <h3>Online Examination(Desktop)</h3>
 
-              <h4>Tools : Java, JavaFx, Socket Programming, File System</h4>
+              <h4>Tools: Java, JavaFx, Socket Programming, File System</h4>
 
-              <p>Teachers can upload question paper from admin panel.
-                and students can give MCQ exam and can see their marks and all previous marks history on every subject.
+              <p>Teachers can upload question paper from admin panel. Students can give MCQ exam.
+                and also can see their marks and all previous marks history on every subject.
               </p>
 
               <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Code</a></h4>
@@ -553,7 +554,7 @@
 
               <h3>Air Fighter(Desktop)</h3>
 
-              <h4>Tools : iGraphics, C</h4>
+              <h4>Tools: iGraphics, C</h4>
 
               <p>Users can play this funny game in desktop and can see leaderboards.</p>
 
@@ -563,7 +564,7 @@
 
               <h3>C Compiler</h3>
 
-              <h4>Tools : Flex, Bison, YACC (Yet Another Compiler-Compiler)</h4>
+              <h4>Tools: Flex, Bison, YACC (Yet Another Compiler-Compiler)</h4>
 
               <p>Small scale C Compiler project which has four steps : symbol table, lexical analysis, parsing and code generation.</p>
 
@@ -573,7 +574,7 @@
 
               <h3>Ray Tracing</h3>
 
-              <h4>Tools : OpenGL</h4>
+              <h4>Tools: OpenGL</h4>
 
               <p>A computer graphics course assignment on which I have generated a realistic image of some common shape using OpenGL.</p>
 
@@ -583,30 +584,24 @@
 
               <h3>Smart Sleeping Mat</h3>
 
-              <h4>Tools : Arduino, Piezoelectric sensor, C</h4>
+              <h4>Tools: Arduino, Piezoelectric sensor, C</h4>
 
-              <p>Smart sleeping mat is a hardware project where a user can set a time for alarm, and until a user goes out of the mat on the time of alarm,
-                alarm won't stop. This will be helpful for those who accidentally close alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
-                mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to his desired position again.</p>
-              <br>
-
-              <h3>An information system on ‘Automation of Govt. Hospital Management’ </h3>
-
-              <h4>Tools : Data Flow Diagram, Class Diagram</h4>
-
-              <p>A system design has been proposed for the information of doctors' availability at any time, doctors' automatic attendance system, ensuring doctors' availability
-                in work time by automated monitoring system, information for current available medicines, services from the hospital.</p>
-
+              <p>Smart sleeping mat is a hardware project where a user can set a time for alarm, and until a user goes out
+                of the mat on the time of alarm, alarm won't stop. This will be helpful for those who accidentally
+                close alarm during sleep. For the patient who needs to sleep in one particular direction, user can calibrate the
+                mat according to that, and if the user moves aside from that particular direction, alarm will go
+                on so that user can move to his desired position again.</p>
               <br><br>
 
-            <h2>Independent Projects : </h2>
+            <h2>Independent Projects: </h2>
 
               <h3>Rapid Roll(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
+              <h4>Tools: Android Studio, Java, Accelerometer, Canvas</h4>
 
               <p>User can play this game using android device accelerometer, see leaderboards and change theme for
-                game screen. The speed of the game increases as time passes by. Game will be over if a user dies three times and user can restart the game again.
+                game screen. The speed of the game increases as time passes by. Game will be over if a user
+                dies three times and user can restart the game again.
               </p>
 
               <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Code</a></h4>
@@ -619,7 +614,7 @@
 
               <h3>Rapid Roll(Desktop)</h3>
 
-              <h4>Tools : iGraphics, C</h4>
+              <h4>Tools: iGraphics, C</h4>
 
               <p>User can play this game in desktop, see leaderboards. The speed of the game increases
                 as time passes by. Game will be over if a user dies three times.</p>
@@ -630,7 +625,7 @@
 
               <h3>Car Racing Game</h3>
 
-              <h4>Tools : Unity 3D, C#</h4>
+              <h4>Tools: Unity 3D, C#</h4>
 
               <p>Users can play and see leaderboard from android, iOS and desktop.</p>
 
@@ -640,7 +635,7 @@
 
               <h3>Notebook(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java, File System</h4>
+              <h4>Tools: Android Studio, Java, File System</h4>
 
               <p>User can save, edit and delete one's writings in the notebook.</p>
 
@@ -653,7 +648,7 @@
 
               <h3>Speedometer and Location(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java, Google Map Api</h4>
+              <h4>Tools: Android Studio, Java, Google Map Api</h4>
 
               <p>Users can see one's current velocity, current location in map and location details.</p>
 
@@ -667,7 +662,7 @@
 
               <h3>Mental Age Simulator(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java</h4>
+              <h4>Tools: Android Studio, Java</h4>
 
               <p>A user needs to answer some questions and based on his answers, his mental age will be generated.</p>
 
@@ -680,7 +675,7 @@
 
               <h3>Flashlight(Android Application)</h3>
 
-              <h4>Tools : Android Studio, Java</h4>
+              <h4>Tools: Android Studio, Java</h4>
 
               <p>Users can use this as a torch light from android device.</p>
 
