--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@
 
             <h4>AIST Project</h4>
 
-            <p>AIST Project is a web application for users to visualize the predictions
+            <p><a href = "https://aist.pythonanywhere.com" target="_blank" rel="noopener">AIST Project</a> is a web
+              application for users to visualize the predictions
               of <a href = "https://dl.acm.org/doi/10.1145/3582274" target="_blank" rel="noopener">AIST</a>
               (An Interpretable Attention-based Deep Learning Model for Crime Prediction)
               model and analyze the predicted and actual crime data in different locations.
