--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
             <p>Bangla article summarizer outputs an extractive Bangla summary of a given Bangla news article which is currently being used
               to generate automated Bangla summary of news articles for
-              <a href = "https://play.google.com/store/apps/details?id=ridmik.one" target="_blank" rel="noopener">Ridmik News</a> app</p>
+              <a href = "https://play.google.com/store/apps/details?id=ridmik.news" target="_blank" rel="noopener">Ridmik News</a> app</p>
 
             <ul>
               <li>contributed for finding and implementing methodology for this Bangla article summarizer through sentence scoring
