--- a/index.html
+++ b/index.html
@@ -317,12 +317,13 @@
 
             <h4>Collaborator : <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/" target="_blank" rel="noopener">Anwar Hossain</a></h4>
 
-            <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
+            <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing,
+              Object Monitoring, Object Tracking, Surveillance System, Polyfit</p>
 
             <img src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px; margin-bottom: 0px;'>
 
             <p>We have introduced and developed a system that can present information of a human or an object to a user or visual inspector by analyzing
-              videos taken from multiple sequential or partially overlapping static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
+              videos taken from multiple sequential or partially overlapping static CCTV data from area of interests. It can reduce manual effort of visual inspector on visual surveillance
               system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
               object from frame to frame in video files, we have used <strong>Speeded Up Robust Features(SURF)</strong>. The recognized object in a frame has been used as a new input
               for recognizing the input object in next video frame so that the input object can be detected more accurately using <strong>SURF</strong> as object shape or orientation can
