--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
       Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>
 
       My research interests lie in the intersection of data science, machine learning, and data privacy. In particular, I am
-      interested in reasoning with data that can solve problems in different domains. I am fascinated in
-      building interactive machine-learning methods with data that can reason the past, and also provide insights
+      interested in reasoning with data that can answer questions and/or solve problems in different domains. I am fascinated in
+      building/improving interactive machine-learning methods with data that can reason the past, and also provide insights
       for the future. I am also interested in protecting user data privacy in software applications.
     </p>
 
@@ -752,7 +752,7 @@
           </div>
 
           <div class="col-12">
-            <h4>Click <a href = "/files/Aminul_Islam_CV.pdf" target="_blank" rel="noopener">HERE</a> to Download</h4>
+            <h4>Click <a href = "/files/Md_Aminul_Islam_Resume.pdf" target="_blank" rel="noopener">HERE</a> to Download</h4>
           </div>
 
 
